# controller-gui-simulator-cb

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Icons12.c  Icons24.c  LittlevGL.layout  RobotoMedium10.c  RobotoMedium14.c  RobotoMonoMedium10.c  icons.c  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  main.c  pulsatrixLogo.c  styles.c  styles.h
fonts/: FiraSansMedium10.c  FiraSansMedium13.c  FivePixel.c  IBMPlexSansMedium13.c  fivepixel.c  icons.c
